--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - run: pip install flake8
       - checkout
-      - flake8 .
+      - run: flake8 .
 
 workflows:
   version: 2
