--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,6 @@
 version: 2
 jobs:
+
   flake8:
     docker:
       - image: python:2.7
@@ -8,8 +9,23 @@ jobs:
       - checkout
       - run: flake8 .
 
+  deploy:
+    docker:
+      - imaghe: google/cloud-sdk
+    steps:
+      - run: echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
+      - run: gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+      - run: gcloud config set project percolate-coffeeapi
+      - run: gcloud preview app deploy app.yaml --version test --promote
+
 workflows:
   version: 2
   coffeeapi:
     jobs:
       - flake8
+      - deploy:
+          requires:
+            - flake8
+          filters:
+            branches:
+              only: cd
