Forgot to change back the test version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - run: gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
       - run: gcloud config set project percolate-coffeeapi
       - checkout
-      - run: gcloud app deploy app.yaml --version test --promote
+      - run: gcloud app deploy app.yaml --version stable --promote
 
 workflows:
   version: 2
